--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,15 @@
 <header class="page-header">
-     <h1 class="project-name"> <a class="header-link" href="{{ site.baseurl }}/"> {{ site.title }}</a></h1>
+     <div class="project-logo">
+          <img src="img/logo-box.png" alt="Praxis Efficax logo" />
+      </div>
+
+     <h1 class="project-name">
+          {% if page.path != 'index.html' %}
+          <a class="header-link" href="{{ site.baseurl }}/"> {{ site.title }}</a>
+          {% else %}
+          {{ site.title }}
+          {% endif %}
+     </h1>
 
      {% if site.description %}
      <p class="project-tagline">{{site.description}}</p>
