--- a/_sass/_palette.scss
+++ b/_sass/_palette.scss
@@ -2,6 +2,7 @@
 
 $celestial-blue: hsla(202, 100%, 50%, 1);
 $snow: hsla(0, 30%, 95%, 1);
+$transparent-snow: hsla(0, 30%, 95%, 0.1);
 $electric-blue: hsla(186, 100%, 77%, 1);
 $indigo-dye: hsla(204, 80%, 19%, 1);
 $cadet-gray: hsla(189, 9%, 59%, 1);
