--- a/style/style.scss
+++ b/style/style.scss
@@ -3,10 +3,14 @@
 
 @import 'palette';
 @import 'normalize.css';
+
+// =============================================================================
+// Globals
+// =============================================================================
 * {
   box-sizing: border-box;
 }
-html, body, .main-content {
+html, body {
   height: 100%;
 }
 body {
@@ -15,7 +19,7 @@ body {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.6;
-  color: $cadet-gray;
+  color: $snow;
   background-color: $indigo-dye;
 }
 
@@ -31,42 +35,78 @@ a:active {
   color: lighten($celestial-blue, 15%);
 }
 
+::selection {
+  background-color: $indigo-dye;
+  color: $electric-blue;
+}
+label:hover {
+  cursor: pointer;
+}
+
+// =============================================================================
+// Header
+// =============================================================================
 .page-header {
-  box-sizing: border-box;
   text-align: center;
 }
 
+.project-logo {
+  display: inline-block;
+  position: relative;
+  top: 3px;
+
+  img {
+    @media screen and (min-width:64em) {
+      height: 2.4rem;
+      width: 2.4rem;
+    }
+    @media screen and (min-width:42em) and (max-width:64em) {
+      height: 1.6rem;
+      width: 1.6rem;
+    }
+    @media screen and (max-width:42em) {
+      height: 1.3rem;
+      width: 1.3rem;
+    }
+  }
+}
+
 .project-name {
-  margin-top: 0;
-  margin-bottom: 0.1rem;
+  color: $snow;
+  display: inline-block;
+  font-family: "Inter", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: normal;
+  letter-spacing: 4px;
 
   @media screen and (min-width:64em) {
-    font-size: 3.25rem;
+    font-size: 2.75rem;
+    margin: 3rem 0 0.1rem 0.8rem;
   }
   @media screen and (min-width:42em) and (max-width:64em) {
-    font-size: 2.25rem;
+    font-size: 1.75rem;
+    margin: 2rem 0 0.1rem 0.7rem;
   }
   @media screen and (max-width:42em) {
-    font-size: 1.75rem;
+    font-size: 1.25rem;
+    margin: 1.333rem 0 0.1rem 0.6rem;
   }
 }
 a.header-link:link,
 a.header-link:visited {
-  color: #666;
+  color: $snow;
   text-decoration: none;
-  transition: 0.4s;
 }
 a.header-link:hover,
 a.header-link:active {
-  text-shadow: 1px 1px 8px #93c9bc;
-  transition: 0.3s;
+  color: $celestial-blue;
   text-decoration: none;
 }
 
 .project-tagline {
   margin-bottom: 2rem;
+  font-style: italic;
   font-weight: normal;
-  opacity: 0.7;
+
   @media screen and (min-width:64em) {
     font-size: 1.25rem;
   }
@@ -78,14 +118,15 @@ a.header-link:active {
   }
 }
 
+// =============================================================================
+// Main content container & headers
+// =============================================================================
 .main-content {
-  position: relative;
-
   @media screen and (min-width:64em) {
-    max-width: 64rem;
+    max-width: 78rem;
     padding: 1.25rem 6rem 0.5rem;
     margin: 0 auto;
-    font-size: 1.15rem;
+    font-size: 1.25rem;
   }
   @media screen and (min-width:42em) and (max-width:64em) {
     padding: 1.15rem 4rem 0.5rem;
@@ -96,17 +137,17 @@ a.header-link:active {
     font-size: 1rem;
   }
 }
-
-.main-content:first-child {
+.main-content > *:first-child {
   margin-top: 0;
 }
-.main-content img {
-  max-width: 100%;
+.main-content > h1 {
+  font-family: "Inter", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 1.75rem;
 }
 .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
   margin-bottom: 1rem;
   font-weight: normal;
-  color: #5F7585;
+  color: $cadet-gray;
 
   @media screen and (min-width:64em) {
     margin-top: 2rem;
@@ -116,22 +157,60 @@ a.header-link:active {
   }
 }
 
-.main-content .logo {
-  position: absolute;
-  height: 200px;
-  width: 200px;
-  top: 30%;
-  left: 50%;
+.index-page {
+  margin-bottom: 4rem;
 
-  margin-top: -100px;
-  margin-left: -100px;
+  & li em {
+    background-color: $indigo-dye;
+    color: $electric-blue;
+    font-weight: 500;
+    padding: 2px;
+  }
 }
-.main-content .logo img {
-  height: auto;
+
+
+// =============================================================================
+// Content cards & two-column
+// =============================================================================
+.main-content .content-card {
+  // outline: 1px solid $cadet-gray; // TODO: remove
+  cursor: default;
+  border-radius: 0.75rem;
+  padding: 0.8rem;
+  transition: background-color 0.75s;
+
+  h2 {
+    color: $snow;
+    font-size: 1.15rem;
+    font-weight: 600;
+    line-height: 1.25em;
+  }
+
+  &:hover {
+    background-color: $transparent-snow;
+  }
+}
+
+@media screen and (min-width:42em) {
+  .main-content .two-columns {
+    display: grid;
+    column-gap: 1rem;
+    row-gap: 1rem;
+    grid-template-columns: 1fr 1fr;
+  }
+  .main-content .content-card {
+    h2 {
+      margin-top: 0;
+    }
+  }
+}
+
+// =============================================================================
+// Prose & structural elements in posts
+// =============================================================================
+.main-content img {
   max-width: 100%;
-  width: 200px;
 }
-
 .main-content p {
   margin-bottom: 1em;
 }
@@ -234,6 +313,20 @@ a.header-link:active {
   padding: 0;
   margin-bottom: 1rem;
 }
+.main-content ul {
+  @media screen and (min-width:64em) {
+    padding-left: 2rem;
+  }
+  @media screen and (min-width:42em) and (max-width:64em) {
+    padding-left: 1.5rem;
+  }
+  @media screen and (max-width:42em) {
+    padding-left: 1.25rem;
+  }
+}
+.main-content li {
+  margin-bottom: 1.2rem;
+}
 .main-content hr {
   height: 2px;
   padding: 0;
@@ -242,6 +335,9 @@ a.header-link:active {
   border: 0;
 }
 
+// =============================================================================
+// Footer
+// =============================================================================
 .site-footer {
   border-top: solid 1px #eff0f1;
   color: #bbb;
@@ -274,6 +370,9 @@ a.header-link:active {
   }
 }
 
+// =============================================================================
+// Post list pages
+// =============================================================================
 ul.post-index {
   margin: 0 auto;
   width: 80%;
@@ -327,8 +426,4 @@ ul.post-index li {
 
 .pagination {
   text-align: center;
-}
-
-label:hover {
-  cursor: pointer;
 }
