Add more index page content

--- a/_sass/_palette.scss
+++ b/_sass/_palette.scss
@@ -6,3 +6,5 @@ $transparent-snow: hsla(0, 30%, 95%, 0.1);
 $electric-blue: hsla(186, 100%, 77%, 1);
 $indigo-dye: hsla(204, 80%, 19%, 1);
 $cadet-gray: hsla(189, 9%, 59%, 1);
+$near-black: hsla(0, 95%, 5%, 1);
+$near-black-near-opaque: hsla(0, 95%, 5%, 0.1);
