--- a/style/style.scss
+++ b/style/style.scss
@@ -53,7 +53,7 @@ label:hover {
 .project-logo {
   display: inline-block;
   position: relative;
-  top: 3px;
+  top: 2px;
 
   img {
     @media screen and (min-width:64em) {
@@ -143,6 +143,7 @@ a.header-link:active {
 .main-content > h1 {
   font-family: "Inter", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 1.75rem;
+  clear: right;
 }
 .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
   margin-bottom: 1rem;
@@ -160,7 +161,18 @@ a.header-link:active {
 .index-page {
   margin-bottom: 4rem;
 
-  & li em {
+  figure.headshot {
+    float: right;
+    margin-top: 0;
+
+    img {
+      border-radius: 50%;
+      outline: 2px solid $cadet-gray;
+      box-shadow: 5px 5px 20px 10px $near-black-near-opaque;
+    }
+  }
+
+  em {
     background-color: $indigo-dye;
     color: $electric-blue;
     font-weight: 500;
