--- a/_sass/_palette.scss
+++ b/_sass/_palette.scss
@@ -1,10 +1,18 @@
 // https://coolors.co/00a2ff-f7f0f0-8af3ff-0a3a59-8d9da0
 
 $celestial-blue: hsla(202, 100%, 50%, 1);
+
 $snow: hsla(0, 30%, 95%, 1);
 $transparent-snow: hsla(0, 30%, 95%, 0.1);
+
 $electric-blue: hsla(186, 100%, 77%, 1);
+
 $indigo-dye: hsla(204, 80%, 19%, 1);
+
 $cadet-gray: hsla(189, 9%, 59%, 1);
+
 $near-black: hsla(0, 95%, 5%, 1);
+$near-black-mid-opaque: hsla(0, 95%, 5%, 0.5);
 $near-black-near-opaque: hsla(0, 95%, 5%, 0.1);
+
+$naples-yellow: hsla(48, 96%, 68%, 1);
