Add footer with copyright and LLC

--- a/style/style.scss
+++ b/style/style.scss
@@ -472,11 +472,8 @@ article.index-page {
 // Footer
 // =============================================================================
 .site-footer {
-  border-top: solid 1px #eff0f1;
-  color: #bbb;
-  margin-top: 2rem;
-  padding-top: 2rem;
-  text-align: right;
+  margin-top: 4rem;
+  text-align: center;
 }
 .site-footer a:link,
 .site-footer a:visited {
