--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <p class="site-footer">
-    All content <a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a> Brad Fults.
+    All content &copy; 2023 Praxis Efficax LLC.
 </p>
