--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="page-header">
      <div class="project-logo">
-          <img src="img/logo-box.png" alt="Praxis Efficax logo" />
+          <img src="/img/logo-box.png" alt="Praxis Efficax logo" />
       </div>
 
      <h1 class="project-name">
