Update copyright year

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <p class="site-footer">
-    All content &copy; 2023 Praxis Efficax LLC.
+    All content &copy; 2023–2024 Praxis Efficax LLC.
 </p>
